# Notre-Dame-Trading-Challenge-2025-Code

./: LICENSE  README.md
Case 1 - Algorithmic Trading/: README.md  pyproject.toml
Case 1 - Algorithmic Trading/src/delta_bot/: __init__.py  config.py  exchange.py  models.py  order_manager.py  quote_engine.py  risk.py  runner.py  strategy.py
Case 1 - Algorithmic Trading/src/delta_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Case 2 - Manual Trading/: analysis.py  prices.csv
